hphp/hack/test/typecheck/erling_loop2.php.exp
ERROR: File "erling_loop2.php", line 26, characters 10-16:
Invalid return type (Typing[4110])
  File "erling_loop2.php", line 16, characters 18-20:
  Expected `int`
  File "erling_loop2.php", line 20, characters 3-13:
  But got `(_ & (int | string))`
ERROR: File "erling_loop2.php", line 26, characters 10-16:
Invalid return type (Typing[4110])
  File "erling_loop2.php", line 16, characters 18-20:
  Expected `int`
  File "erling_loop2.php", line 24, characters 15-21:
  But got `string`
